Fix modal z-index to cover admin bar

--- a/style.css
+++ b/style.css
@@ -617,7 +617,7 @@ h1, h2, h3, h4 {
 .modal {
     display: none;
     position: fixed;
-    z-index: 3000;
+    z-index: 10010;
     left: 0;
     top: 0;
     width: 100%;
